--- a/src/app/pages/charts/chartjs/chartjs.component.html
+++ b/src/app/pages/charts/chartjs/chartjs.component.html
@@ -36,7 +36,7 @@
     </nb-select>
     <nb-select [(selected)]="selectedGroup" (selectedChange)="changeGroup($event)">
       <nb-option *ngFor="let groupId of [1,2,3,4,5,6,7,8,9,10]" [value]="groupId">Groupe {{ groupId }}</nb-option>
-      <!--      <nb-option value="2">Groupe 2</nb-option>-->
+            <nb-option value="20">Génération</nb-option>
       <!--      <nb-option value="3">Groupe 3</nb-option>-->
       <!--      <nb-option value="3">Groupe 3</nb-option>-->
       <!--      <nb-option value="3">Groupe 3</nb-option>-->
