--- a/src/app/pages/charts/chartsjs-live/chartjs-live.component.html
+++ b/src/app/pages/charts/chartsjs-live/chartjs-live.component.html
@@ -9,6 +9,7 @@
     </nb-select>
     <nb-select [(selected)]="selectedGroup" (selectedChange)="changeGroup($event)">
       <nb-option *ngFor="let groupId of [1,2,3,4,5,6,7,8,9,10]" [value]="groupId">Groupe {{ groupId }}</nb-option>
+      <nb-option value="20">Génération</nb-option>
     </nb-select>
     <nb-select [(selected)]="selectedField" (selectedChange)="changeField($event)">
       <nb-option value="Tous">Toutes les mesures</nb-option>
