--- a/src/app/pages/tables/tree-grid/tree-grid.component.html
+++ b/src/app/pages/tables/tree-grid/tree-grid.component.html
@@ -15,7 +15,14 @@
         </th>
         <td nbTreeGridCell *nbTreeGridCellDef="let row">
           <ngx-fs-icon [kind]="row.data.kind" [expanded]="row.expanded"></ngx-fs-icon>
-          {{row.data[customColumn]}}
+          <a ngIf="row.data.kind==='csv'; else kindDir" onclick="downloadCSV()">
+            {{row.data[customColumn]}}
+          </a>
+          
+          <ng-template #kindDir>
+            {{row.data[customColumn]}}
+          </ng-template>
+          
         </td>
       </ng-container>
 
