--- a/src/app/pages/tables/tree-grid/tree-grid.component.html
+++ b/src/app/pages/tables/tree-grid/tree-grid.component.html
@@ -15,14 +15,15 @@
         </th>
         <td nbTreeGridCell *nbTreeGridCellDef="let row">
           <ngx-fs-icon [kind]="row.data.kind" [expanded]="row.expanded"></ngx-fs-icon>
-          <a ngIf="row.data.kind==='csv'; else kindDir" onclick="downloadCSV()">
+<!--          <a *ngIf="row.data.kind==='csv'; else kindDir" (click)="downloadCSV('export-text', 'adrenaline', '1')"-->
+          <a *ngIf="row.data.kind==='csv'; else kindDir"
+             href="http://localhost:5000/lapin/csv/adrenaline/1?limit=10">
             {{row.data[customColumn]}}
           </a>
-          
           <ng-template #kindDir>
             {{row.data[customColumn]}}
           </ng-template>
-          
+
         </td>
       </ng-container>
 
