Correction to csv download

--- a/src/app/pages/tables/tree-grid/tree-grid.component.html
+++ b/src/app/pages/tables/tree-grid/tree-grid.component.html
@@ -17,7 +17,7 @@
           <ngx-fs-icon [kind]="row.data.kind" [expanded]="row.expanded"></ngx-fs-icon>
 <!--          <a *ngIf="row.data.kind==='csv'; else kindDir" (click)="downloadCSV('export-text', 'adrenaline', '1')"-->
           <a *ngIf="row.data.kind==='csv'; else kindDir"
-              href="downloadCSV({{row.data[customColumn]}})">
+              href="{{downloadCSV(row.data[customColumn])}}">
             {{row.data[customColumn]}}
           </a>
           <ng-template #kindDir>
